--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.13.0",
     "pg": "^6.0.1",
     "pg-promise": "^5.1.0",
+    "promise":"7.1.1",
     "redis": "^2.4.2"
   }
 }
