--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
   ],
   "dependencies": {
     "angular": "angularjs#^1.5.0",
-    "bootstrap": "#v4.0.0-alpha.6",
+    "bootstrap": "#v3.3.7",
     "angular-ui-router": "#v1.0.4",
     "angular-bootstrap": "^2.5.0",
     "requirejs": "^2.1.22",
